old-c-code/grammar.txt
<start> := <object>

<object> := '{' <string> ':' <value><nextPair> '}'
<nextPair> := ',' <string> ':' <value><nextPair>

<array> := '[' <value><nextValue> ']'

<value> := <string> | <number> | <bool> | <array> | <object>
<nextValue> := ',' <value><nextValue>

<string> := " [ (any character) ] "
<number> := (-) (0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9) [ (0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9) ] (.(0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9) [ (0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9))

<bool> := true | false
